fix: overflow

--- a/src/components/summary/index.module.scss
+++ b/src/components/summary/index.module.scss
@@ -12,25 +12,32 @@
   flex-direction: column;
 
   @include screen-adapt('phone') {
-    transition: width 1s;
-    width: 0;
+    transition: left 1s, opacity 1s;
+    position: fixed;
+    top: 0;
+    left: -80%;
+    width: 80%;
+    height: 100%;
+    z-index: 100;
+    opacity: 0;
   }
 
   @include screen-adapt('pad') {
-    transition: width 1s;
-    width: 0;
+    transition: left 1s, opacity 1s;
+    position: fixed;
+    top: 0;
+    left: -50%;
+    width: 50%;
+    height: 100%;
+    opacity: 0;
+    z-index: 100;
   }
 }
 
 .active {
   display: block;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 300px;
-  height: 100%;
-  z-index: 100;
   opacity: 1;
+  left: 0;
 
   .avator {
     display: inline-block;
